--- a/src/aces/webctrl/postgresql/resources/MainPage.html
+++ b/src/aces/webctrl/postgresql/resources/MainPage.html
@@ -68,6 +68,47 @@
           req.send();
         }
       }
+      function resetNow(){
+        if (checkSave()){
+          resetButton.disabled = true;
+          const req = new XMLHttpRequest();
+          req.open("POST","__PREFIX__/index?type=resetNow");
+          req.setRequestHeader("content-type", "application/x-www-form-urlencoded");
+          req.timeout = 5000;
+          req.onreadystatechange = function(){
+            if (this.readyState===4){
+              if (this.status===200){
+                statusBox.innerText = "Reset Successful";
+                idBox.innerText = "-1";
+              }else{
+                statusBox.innerText = "HTTP Error "+this.status;
+              }
+              resetButton.disabled = false;
+            }
+          };
+          req.send();
+        }
+      }
+      function testSFTP(){
+        if (checkSave()){
+          sftpButton.disabled = true;
+          const req = new XMLHttpRequest();
+          req.open("POST","__PREFIX__/index?type=testSFTP");
+          req.setRequestHeader("content-type", "application/x-www-form-urlencoded");
+          req.timeout = 8000;
+          req.onreadystatechange = function(){
+            if (this.readyState===4){
+              if (this.status===200){
+                statusBox.innerText = this.responseText=="1"?"SFTP Connection Successful":"SFTP Connection Failed";
+              }else{
+                statusBox.innerText = "HTTP Error "+this.status;
+              }
+              sftpButton.disabled = false;
+            }
+          };
+          req.send();
+        }
+      }
       function save(){
         saveButton.disabled = true;
         const req = new XMLHttpRequest();
@@ -165,7 +206,19 @@
       <button class="e" id="saveButton" onclick="save()">Save Changes</button>
       <button type="button" class="e" onclick="prompt=false;window.location.reload()">Discard Changes</button>
       <button class="e" id="syncButton" onclick="syncNow()">Sync Now</button>
+      <button class="e" id="resetButton" onclick="resetNow()">Reset ID</button>
+      <button class="e" id="sftpButton" onclick="testSFTP()">Test SFTP</button>
       <a class="e" href="__PREFIX__/index?type=downloadSQL" download="Setup.sql" target="_blank">Download Setup SQL</a>
+      <br><br>
+      <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
+      <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist">Operator Blacklist</a>
+      <a class="e nav" href="__PREFIX__/TableEditor?table=addon_whitelist">Add-On Whitelist</a>
+      <a class="e nav" href="__PREFIX__/TableEditor?table=addon_blacklist">Add-On Blacklist</a>
+      <a class="e nav" href="__PREFIX__/TableEditor?table=settings">Settings</a>
+      <br><br>
+      <a class="e nav" href="__PREFIX__/LocalOperators">View Local Operators</a>
+      <a class="e nav" href="__PREFIX__/LogViewer">View Log</a>
+      <a class="e nav" href="__DOCUMENTATION__" target="_blank">Documentation</a>
       <span id="hiddenSpan" style="min-width:6em;color:black;display:inline-block;position:absolute;left:-100000px;white-space:pre"></span>
     </div>
     <script>
