--- a/src/aces/webctrl/postgresql/resources/MainPage.html
+++ b/src/aces/webctrl/postgresql/resources/MainPage.html
@@ -59,6 +59,8 @@
             if (this.readyState===4){
               if (this.status===200){
                 statusBox.innerText = "Sync Initiated";
+              }else if (this.status==0){
+                statusBox.innerText = "Request timed out.";
               }else{
                 statusBox.innerText = "HTTP Error "+this.status;
               }
@@ -80,6 +82,8 @@
               if (this.status===200){
                 statusBox.innerText = "Reset Successful";
                 idBox.innerText = "-1";
+              }else if (this.status==0){
+                statusBox.innerText = "Request timed out.";
               }else{
                 statusBox.innerText = "HTTP Error "+this.status;
               }
@@ -100,6 +104,8 @@
             if (this.readyState===4){
               if (this.status===200){
                 statusBox.innerText = this.responseText=="1"?"SFTP Connection Successful":"SFTP Connection Failed";
+              }else if (this.status==0){
+                statusBox.innerText = "Request timed out.";
               }else{
                 statusBox.innerText = "HTTP Error "+this.status;
               }
@@ -121,6 +127,8 @@
               parseRefresh(this.responseText);
               passwordField.value = "";
               unregisterChange();
+            }else if (this.status==0){
+              statusBox.innerText = "Request timed out.";
             }else{
               statusBox.innerText = "HTTP Error "+this.status;
             }
@@ -143,6 +151,8 @@
           if (this.readyState===4){
             if (this.status===200){
               parseRefresh(this.responseText);
+            }else if (this.status==0){
+              statusBox.innerText = "Request timed out.";
             }else{
               statusBox.innerText = "HTTP Error "+this.status;
             }
