--- a/src/aces/webctrl/postgresql/resources/TableEditorPage.html
+++ b/src/aces/webctrl/postgresql/resources/TableEditorPage.html
@@ -368,7 +368,7 @@
       <br>
       <button class="e" id="saveButton" onclick="save()">Save Changes</button>
       <button class="e" id="discardButton" onclick="discard()">Discard Changes</button>
-      <button class="e" id="refreshButton" onclick="window.location.refresh()">Refresh</button>
+      <button class="e" id="refreshButton" onclick="refresh()">Refresh</button>
       <br><br>
       <a class="e nav" href="__PREFIX__/TableEditor?table=operator_whitelist">Operator Whitelist</a>
       <a class="e nav" href="__PREFIX__/TableEditor?table=operator_blacklist">Operator Blacklist</a>
